--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -4,6 +4,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 110px;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
 }
 .menu a{
     color: #FFFFFF !important;
