--- a/src/Component/Product/Product.css
+++ b/src/Component/Product/Product.css
@@ -1,8 +1,12 @@
+*button:focus {
+    outline: none !important;
+}
+
 .product{
     border: 1px solid #95A0A7;
     padding: 5px;
     width: 100%;
-    height: 610;
+    height: 420px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -25,10 +29,13 @@ p,h3,h4{
 .product img{
     width: 100%;
     border-radius: 15px;
+    height: 200px;
+    object-fit: cover;
 }
 .product button{
     width: 100%;
-    background-color: #B41B2D;
+    background-color: rgb(31 33 67);
+    
     color: #FFFFFF;
     border:none;
     transition: 0.2s all ease-in-out;
@@ -36,4 +43,5 @@ p,h3,h4{
 .product button:hover{
     background-color: #FFE0B3;
     color: #000000;
+    border: none;
 }
